Fix page break in PI. Fix extra page in SI without notes.

--- a/repairs/static/documents/instructions.css
+++ b/repairs/static/documents/instructions.css
@@ -123,6 +123,10 @@
   td[data-highlight="true"] {
     background-color: var(--color-green);
   }
+
+  .new-page {
+    page-break-before: always;
+  }
 }
 
 @media screen {
